--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,11 +1,29 @@
+@import 'reset';
+@import 'font';
+@import 'variables';
+
 html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-		Helvetica Neue, sans-serif;
+	font-family: Manrope, Arial, Helvetica Neue, Helvetica, sans-serif;
+
+	/* https://gist.github.com/hsleonis/55712b0eafc9b25f1944 */
+	font-size: 100%;
+	text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
+	font-variant-ligatures: none;
+	text-rendering: optimizeLegibility;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-font-smoothing: antialiased;
 }
 
 * {
 	box-sizing: border-box;
+}
+
+hr {
+	height: 1px;
+	margin: 16px 0;
+	background-color: $light-gray-two;
+	border: none;
 }
