--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,13 +1,14 @@
 $white: #fff;
 $off-white: #fafafa;
 
-$gray: #8f8f8f;
+$gray: #9698a3;
 $dar-gray: #2f303a;
 $light-gray-one: #e5e5e5;
 $light-gray-two: #ebebeb;
 $light-gray-three: #ccc;
 
 $black: #000;
+$off-black: #191a1f;
 
 $blue: #4c66d5;
 $light-blue: #e7ecff;
@@ -15,8 +16,9 @@ $light-blue: #e7ecff;
 $orange: #d5824c;
 $light-orange: #fff0e7;
 
-$dark-purple: #363743;
-$light-purple: #4f5263;
+$dark-purple: #33353d;
+$light-purple-one: #3d3f47;
+$light-purple-two: #5a5b66;
 
 $font-size-h1: 52px;
 $line-height-h1: 64px;
