--- a/components/dark-mode-toggle/index.module.scss
+++ b/components/dark-mode-toggle/index.module.scss
@@ -1,21 +1,26 @@
 @import '../../styles/variables.scss';
 
 .root {
-	padding: 2px;
+	position: relative;
 }
 
 .label {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 28px;
-	height: 28px;
+	width: 32px;
+	height: 32px;
 	cursor: pointer;
 	user-select: none;
 }
 
 .checkbox {
-	position: relative;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
 	overflow: hidden;
 	cursor: pointer;
 	visibility: hidden;
