--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,24 +1,16 @@
 $white: #fff;
 $off-white: #fafafa;
 
-$gray: #9698a3;
-$dar-gray: #2f303a;
-$light-gray-one: #e5e5e5;
-$light-gray-two: #ebebeb;
-$light-gray-three: #ccc;
+$grey: #9698a3;
+$light-grey: #ebebeb;
+$dark-grey: #3d3f47;
+$darker-grey: #33353d;
 
 $black: #000;
-$off-black: #191a1f;
+$dark-black: #191a1f;
 
-$blue: #4c66d5;
-$light-blue: #e7ecff;
-
-$orange: #d5824c;
-$light-orange: #fff0e7;
-
-$dark-purple: #33353d;
-$light-purple-one: #3d3f47;
-$light-purple-two: #5a5b66;
+$link: #4c66d5;
+$link-dark: #7083ff;
 
 $font-size-h1: 52px;
 $line-height-h1: 64px;
