feat(page): add favycon home page

--- a/components/typography/index.module.scss
+++ b/components/typography/index.module.scss
@@ -28,6 +28,16 @@
 .footer {
 	font-size: $font-size-footer;
 	line-height: $line-height-footer;
+
+	a {
+		color: inherit;
+
+		&:focus,
+		&:active,
+		&:hover {
+			color: inherit;
+		}
+	}
 }
 
 .superscript {
