--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -12,6 +12,9 @@ $dark-black: #191a1f;
 $link: #4c66d5;
 $link-dark: #7083ff;
 
+$red: #e15151;
+$green: #3ea161;
+
 $font-size-h1: 52px;
 $line-height-h1: 64px;
 
@@ -32,3 +35,6 @@ $line-height-footer: 24px;
 
 $font-size-superscript: 12px;
 $line-height-superscript: 24px;
+
+$font-size-title: 15px;
+$line-height-title: 24px;
