--- a/components/button/index.module.scss
+++ b/components/button/index.module.scss
@@ -2,11 +2,17 @@
 
 .base {
 	padding: 6px 12px;
-	font-size: $font-size-medium-body;
-	line-height: $line-height-medium-body;
+	font-size: $font-size-title;
+	line-height: $line-height-title;
 	color: $black;
 	cursor: pointer;
 	border-radius: 4px;
+
+	&:hover,
+	&:focus,
+	&:active {
+		outline: none;
+	}
 }
 
 .primary {
@@ -15,10 +21,6 @@
 	border: 1px solid $light-grey;
 	box-shadow: 0 2px 4px 0 rgba($black, 0.12);
 	transition: all 0.2s ease;
-
-	&:focus {
-		outline: none;
-	}
 
 	&:disabled {
 		color: $grey;
@@ -31,7 +33,14 @@
 
 .transparent {
 	composes: base;
+	padding: 6px 0;
 	border: 1px solid transparent;
+
+	&:hover,
+	&:focus,
+	&:active {
+		text-decoration: underline;
+	}
 }
 
 .dark {
@@ -58,4 +67,28 @@
 
 .bold {
 	font-weight: 700;
+}
+
+.black {
+	color: $black;
+}
+
+.gray {
+	color: $grey;
+}
+
+.white {
+	color: $white;
+}
+
+.link {
+	color: $link;
+}
+
+.bgLink {
+	background: $link;
+}
+
+.bgGreen {
+	background: $green;
 }
