--- a/components/header/index.module.scss
+++ b/components/header/index.module.scss
@@ -26,6 +26,6 @@
 }
 
 .dark {
-	background: $dark-black;
-	box-shadow: 0 0 10px rgba($dark-black, 0.5);
+	background: $darker-black;
+	box-shadow: 0 0 10px rgba($darker-black, 0.5);
 }
