--- a/styles/font.scss
+++ b/styles/font.scss
@@ -32,3 +32,11 @@
 	font-weight: 700;
 	font-display: swap;
 }
+
+@font-face {
+	font-family: 'Monaco';
+	src: url('/fonts/Monaco/Monaco.ttf');
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+}
