--- a/components/drag-and-drop/index.module.scss
+++ b/components/drag-and-drop/index.module.scss
@@ -12,7 +12,7 @@
 	transition: background 0.2s ease;
 
 	&.dark {
-		background: $darker-grey;
+		background: $dark-black;
 	}
 
 	&::before {
@@ -156,6 +156,9 @@
 	}
 
 	img {
+		position: absolute;
+		top: -1px;
+		left: -1px;
 		width: 48px;
 		height: 48px;
 		border-radius: 4px;
@@ -186,11 +189,19 @@
 	display: flex;
 	padding: 16px 0;
 	border-top: 1px solid $light-grey;
+
+	&.dark {
+		border-top: 1px solid $darker-grey;
+	}
 }
 
 .imageOptionsWrapper {
 	padding: 8px 0 16px;
 	border-top: 1px solid $light-grey;
+
+	&.dark {
+		border-top: 1px solid $darker-grey;
+	}
 }
 
 .imageOptions {
@@ -219,6 +230,66 @@
 	}
 }
 
+.imagePreviewDownload {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 16px 0 12px;
+}
+
+.preview {
+	position: relative;
+	width: 40px;
+	height: 40px;
+	margin-right: 12px;
+	background: $white;
+	box-shadow: 0 2px 4px rgba($black, 0.12);
+
+	img {
+		width: 40px;
+		height: 40px;
+		object-fit: contain;
+	}
+
+	&.circle,
+	&.circle img {
+		border-radius: 24px;
+	}
+
+	&.square,
+	&.square img {
+		width: 48px;
+		height: 48px;
+		border-radius: 4px;
+	}
+
+	&.rounded,
+	&.rounded img {
+		margin-right: 0;
+		border-radius: 14px;
+	}
+}
+
+.imagePreviewTitle {
+	margin-bottom: 4px;
+	text-align: center;
+}
+
+.imagePreviewSubtitle {
+	max-width: 348px;
+	margin: 0 auto;
+	margin-bottom: 42px;
+	text-align: center;
+}
+
+.imageInfoItemSvg {
+	margin-right: 8px;
+}
+
+.showCode {
+	margin-left: 12px;
+}
+
 .imageFooter {
 	position: absolute;
 	right: 0;
@@ -227,10 +298,46 @@
 	align-items: center;
 	justify-content: flex-end;
 	width: 100%;
-	padding: 24px;
+	padding: 23px 24px 24px 24px;
 	border-top: 1px solid $light-grey;
+
+	&.dark {
+		border-top: 1px solid $darker-grey;
+	}
+}
+
+.spaceBetween {
+	justify-content: space-between;
 }
 
 .imageGenerate {
 	margin-left: 24px;
+}
+
+.modalContainer {
+	max-width: 730px;
+	height: 100%;
+	margin: 0 auto;
+}
+
+.modalHeader {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 10px;
+}
+
+.modalCode {
+	height: 100%;
+	max-height: 488px;
+	padding: 28px;
+	color: $white;
+	background: $darker-grey;
+	border-radius: 8px;
+
+	code {
+		font-family: Monaco, monospace;
+		font-size: $font-size-small-body;
+		line-height: $line-height-small-body;
+	}
 }
