--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -7,7 +7,8 @@ $dark-grey: #3d3f47;
 $darker-grey: #33353d;
 
 $black: #000;
-$dark-black: #191a1f;
+$dark-black: #222329;
+$darker-black: #101114;
 
 $link: #4c66d5;
 $link-dark: #7083ff;
