--- a/components/drag-and-drop/index.module.scss
+++ b/components/drag-and-drop/index.module.scss
@@ -5,7 +5,6 @@
 	width: 100%;
 	max-width: 476px;
 	min-height: 360px;
-	padding: 24px 24px 20px;
 	background: $white;
 	border-radius: 8px;
 	box-shadow: 0 2px 4px rgba($black, 0.12);
@@ -14,23 +13,17 @@
 	&.dark {
 		background: $dark-black;
 	}
+}
 
-	&::before {
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		z-index: 3;
+.container {
+	padding: 24px 24px 20px;
+	pointer-events: all;
+	border-radius: 8px;
+	transition: opacity 0.2s ease;
+
+	&.loading {
 		pointer-events: none;
-		content: '';
-		background: rgba($white, 0);
-		border-radius: 8px;
-	}
-
-	&.loading::before {
-		pointer-events: all;
-		background: rgba($white, 0.8);
+		opacity: 0.32;
 	}
 }
 
@@ -189,6 +182,7 @@
 	display: flex;
 	padding: 16px 0;
 	border-top: 1px solid $light-grey;
+	transition: all 0.2s ease;
 
 	&.dark {
 		border-top: 1px solid $darker-grey;
@@ -198,6 +192,7 @@
 .imageOptionsWrapper {
 	padding: 8px 0 16px;
 	border-top: 1px solid $light-grey;
+	transition: all 0.2s ease;
 
 	&.dark {
 		border-top: 1px solid $darker-grey;
@@ -300,6 +295,7 @@
 	width: 100%;
 	padding: 23px 24px 24px 24px;
 	border-top: 1px solid $light-grey;
+	transition: all 0.2s ease;
 
 	&.dark {
 		border-top: 1px solid $darker-grey;
