--- a/components/typography/index.module.scss
+++ b/components/typography/index.module.scss
@@ -88,7 +88,10 @@
 	}
 }
 
-// TODO: check this disabled state
+.green {
+	color: $green;
+}
+
 .muted {
 	color: $grey;
 	transition: color 0.2s ease;
