--- a/styles/main.scss
+++ b/styles/main.scss
@@ -45,3 +45,16 @@ hr {
 		background: $darker-grey;
 	}
 }
+
+.ReactModal__Overlay {
+	opacity: 0;
+	transition: opacity 0.2s ease;
+}
+
+.ReactModal__Overlay--after-open {
+	opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+	opacity: 0;
+}
