fix(button): fix button font family

--- a/components/button/index.module.scss
+++ b/components/button/index.module.scss
@@ -2,6 +2,7 @@
 
 .base {
 	padding: 5px 12px;
+	font-family: Manrope, Arial, Helvetica Neue, Helvetica, sans-serif;
 	font-size: $font-size-title;
 	line-height: $line-height-title;
 	color: $black;
