--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -7,10 +7,14 @@ $dark-grey: #3d3f47;
 $darker-grey: #33353d;
 
 $black: #000;
-$dark-black: #191a1f;
+$dark-black: #222329;
+$darker-black: #101114;
 
 $link: #4c66d5;
 $link-dark: #7083ff;
+
+$red: #e15151;
+$green: #3ea161;
 
 $font-size-h1: 52px;
 $line-height-h1: 64px;
@@ -32,3 +36,6 @@ $line-height-footer: 24px;
 
 $font-size-superscript: 12px;
 $line-height-superscript: 24px;
+
+$font-size-title: 15px;
+$line-height-title: 24px;
