--- a/components/button/index.module.scss
+++ b/components/button/index.module.scss
@@ -1,12 +1,20 @@
 @import '../../styles/variables.scss';
 
 .base {
-	padding: 6px 12px;
-	font-size: $font-size-medium-body;
-	line-height: $line-height-medium-body;
+	padding: 5px 12px;
+	font-family: Manrope, Arial, Helvetica Neue, Helvetica, sans-serif;
+	font-size: $font-size-title;
+	line-height: $line-height-title;
 	color: $black;
 	cursor: pointer;
 	border-radius: 4px;
+	transition: all 0.2s ease;
+
+	&:hover,
+	&:focus,
+	&:active {
+		outline: none;
+	}
 }
 
 .primary {
@@ -16,32 +24,41 @@
 	box-shadow: 0 2px 4px 0 rgba($black, 0.12);
 	transition: all 0.2s ease;
 
-	&:focus {
-		outline: none;
-	}
-
 	&:disabled {
 		color: $grey;
 	}
-}
 
-.noClick {
-	cursor: default;
+	&.dark {
+		color: $white;
+		background-color: $dark-black;
+		border: 1px solid $dark-black;
+
+		&:disabled {
+			color: $grey;
+		}
+	}
 }
 
 .transparent {
 	composes: base;
+	padding: 5px 0;
+	background: transparent;
 	border: 1px solid transparent;
+
+	&:hover,
+	&:focus,
+	&:active {
+		text-decoration: underline;
+	}
 }
 
-.dark {
-	color: $white;
-	background-color: $darker-grey;
-	border: 1px solid $darker-grey;
-
-	&:disabled {
-		color: $grey;
-	}
+.regularTransparent {
+	composes: transparent;
+	padding: 0;
+	font-size: $font-size-regular-body;
+	line-height: $line-height-regular-body;
+	text-decoration: underline;
+	border: 0;
 }
 
 .regular {
@@ -58,4 +75,40 @@
 
 .bold {
 	font-weight: 700;
+}
+
+.black {
+	color: $black;
+}
+
+.gray {
+	color: $grey;
+}
+
+.white {
+	color: $white;
+}
+
+.link {
+	color: $link;
+}
+
+.bgLink {
+	background: $link;
+	border-color: $link;
+
+	&.dark {
+		background: $link;
+		border-color: $link;
+	}
+}
+
+.bgGreen {
+	background: $green;
+	border-color: $green;
+
+	&.dark {
+		background: $green;
+		border-color: $green;
+	}
 }
