--- a/components/typography/index.module.scss
+++ b/components/typography/index.module.scss
@@ -54,6 +54,11 @@
 	line-height: $line-height-title;
 }
 
+.largeTitle {
+	font-size: $font-size-large-title;
+	line-height: $line-height-large-title;
+}
+
 .regular {
 	font-weight: 400;
 }
