--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -39,3 +39,6 @@ $line-height-superscript: 24px;
 
 $font-size-title: 15px;
 $line-height-title: 24px;
+
+$font-size-large-title: 18px;
+$line-height-large-title: 24px;
