--- a/styles/main.scss
+++ b/styles/main.scss
@@ -58,3 +58,11 @@ hr {
 .ReactModal__Overlay--before-close {
 	opacity: 0;
 }
+
+.preload,
+.preload * {
+	-webkit-transition: none !important;
+	-moz-transition: none !important;
+	-ms-transition: none !important;
+	-o-transition: none !important;
+}
