--- a/components/dark-mode-toggle/index.module.scss
+++ b/components/dark-mode-toggle/index.module.scss
@@ -5,6 +5,7 @@
 }
 
 .label {
+	position: relative;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -28,4 +29,38 @@
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	-webkit-tap-highlight-color: transparent;
+}
+
+.sun,
+.moon {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transition: all 0.3s ease;
+}
+
+:global(.light-mode) {
+	.sun {
+		visibility: hidden;
+		opacity: 0;
+		transform: scale(0);
+	}
+	.moon {
+		opacity: 1;
+		transform: rotate(0) scale(1);
+	}
+}
+
+:global(.dark-mode) {
+	.sun {
+		opacity: 1;
+		transform: scale(1);
+	}
+	.moon {
+		visibility: hidden;
+		opacity: 0;
+		transform: rotate(115deg) scale(0.4);
+	}
 }
