feat(favycon): add about us modal (#49)
* feat(about-us): add about us modal

* fix(dark-mode): fix dark mode white flash

* improvement(seo): improved seo meta tags

* improvement(copy-code): add code copied label

* improvement(dark-mode): improve dark mode white flash

--- a/components/typography/index.module.scss
+++ b/components/typography/index.module.scss
@@ -54,6 +54,11 @@
 	line-height: $line-height-title;
 }
 
+.largeTitle {
+	font-size: $font-size-large-title;
+	line-height: $line-height-large-title;
+}
+
 .regular {
 	font-weight: 400;
 }
@@ -73,10 +78,10 @@
 .black {
 	color: $black;
 	transition: color 0.2s ease;
+}
 
-	&.dark {
-		color: $white;
-	}
+:global(.dark-mode) .black {
+	color: $white;
 }
 
 .gray {
@@ -86,10 +91,10 @@
 .white {
 	color: $white;
 	transition: color 0.2s ease;
+}
 
-	&.dark {
-		color: $black;
-	}
+:global(.dark-mode) .white {
+	color: $black;
 }
 
 .green {
@@ -99,8 +104,8 @@
 .muted {
 	color: $grey;
 	transition: color 0.2s ease;
+}
 
-	&.dark {
-		color: $grey;
-	}
+:global(.dark-mode) .muted {
+	color: $grey;
 }
