--- a/components/dark-mode-toggle/index.module.scss
+++ b/components/dark-mode-toggle/index.module.scss
@@ -39,28 +39,40 @@
 	width: 100%;
 	height: 100%;
 	transition: all 0.3s ease;
+
+	path {
+		transition: all 0.3s ease;
+	}
 }
 
 :global(.light-mode) {
 	.sun {
 		visibility: hidden;
-		opacity: 0;
-		transform: scale(0);
+		transform: translateX(-1px) scale(0);
 	}
 	.moon {
-		opacity: 1;
-		transform: rotate(0) scale(1);
+		transform: translate(0, 0) rotate(0) scale(1);
+	}
+	.sun,
+	.moon {
+		path {
+			fill: #ccc;
+		}
 	}
 }
 
 :global(.dark-mode) {
 	.sun {
-		opacity: 1;
-		transform: scale(1);
+		transform: translateX(0) scale(1);
 	}
 	.moon {
 		visibility: hidden;
-		opacity: 0;
-		transform: rotate(115deg) scale(0.4);
+		transform: translate(0, -2px) rotate(115deg) scale(0.4);
+	}
+	.sun,
+	.moon {
+		path {
+			fill: #5a5b66;
+		}
 	}
 }
