--- a/components/dark-mode-toggle/index.module.scss
+++ b/components/dark-mode-toggle/index.module.scss
@@ -76,3 +76,15 @@
 		}
 	}
 }
+
+:global(.light-mode) .label {
+	&:hover path {
+		fill: $link;
+	}
+}
+
+:global(.dark-mode) .label {
+	&:hover path {
+		fill: $link-dark;
+	}
+}
