--- a/components/favycon-info/index.module.scss
+++ b/components/favycon-info/index.module.scss
@@ -54,11 +54,11 @@
 	bottom: 0;
 	left: 0;
 	z-index: 10;
-	background-color: rgba(255, 255, 255, 0.64);
+	background-color: rgba($light-grey, 0.64);
 }
 
 :global(.dark-mode) .overlay {
-	background-color: rgba(0, 0, 0, 0.8);
+	background-color: rgba($black, 0.8);
 }
 
 .content {
@@ -68,7 +68,7 @@
 	width: 100%;
 	max-width: 730px;
 	height: 100%;
-	max-height: 497px;
+	max-height: 568px;
 	padding: 0;
 	overflow: auto;
 	background: $white;
@@ -82,6 +82,12 @@
 
 :global(.dark-mode) .content {
 	background: $dark-black;
+}
+
+.modalContainer {
+	max-width: 572px;
+	padding: 0 16px;
+	margin: 0 auto;
 }
 
 .modalHeader {
@@ -104,20 +110,20 @@
 
 .hr {
 	padding: 0;
+	margin: 0;
 }
 
 .people {
 	display: flex;
 	flex-wrap: wrap;
-	max-width: 572px;
-	margin: 32px auto 0;
+	justify-content: space-between;
+	margin: 8px auto 32px;
 }
 
 .person {
 	display: flex;
-	flex: 0 0 50%;
-	padding: 0 16px;
-	margin-bottom: 24px;
+	width: calc(50% - 15px);
+	margin-top: 24px;
 }
 
 .personAvatar {
@@ -141,4 +147,10 @@
 
 :global(.dark-mode) .personTwitter p {
 	color: #55acee;
+}
+
+.modalFooter {
+	padding-bottom: 48px;
+	margin-top: 12px;
+	text-align: center;
 }
