--- a/components/svgs/svg-image-upload.module.scss
+++ b/components/svgs/svg-image-upload.module.scss
@@ -1,15 +1,15 @@
 @import '../../styles/variables.scss';
 
-.path {
+.rect {
 	fill: #ccc;
-	transition: fill 0.2s ease;
+	transition: all 0.2s ease;
 
 	&.active {
 		fill: $link;
 	}
 }
 
-:global(.dark-mode) .path {
+:global(.dark-mode) .rect {
 	fill: #5a5b66;
 
 	&.active {
