--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,5 +1,10 @@
 @import '../styles/variables.scss';
 
+.main {
+	max-width: 1440px;
+	margin: 0 auto;
+}
+
 .container {
 	display: flex;
 	align-items: center;
