--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -12,9 +12,11 @@ $darker-black: #101114;
 
 $link: #4c66d5;
 $link-dark: #7083ff;
+$link-hover: #7683e2;
 
 $red: #e15151;
 $green: #3ea161;
+$green-hover: #69b985;
 
 $font-size-h1: 52px;
 $line-height-h1: 64px;
