--- a/components/drag-and-drop/index.module.scss
+++ b/components/drag-and-drop/index.module.scss
@@ -27,20 +27,6 @@
 	}
 }
 
-.dropZoneWrapper {
-	position: relative;
-	height: 244px;
-	margin-bottom: 16px;
-	text-align: center;
-	background: $off-white;
-	border-radius: 6px;
-	transition: background 0.2s ease;
-}
-
-:global(.dark-mode) .dropZoneWrapper {
-	background: $dark-grey;
-}
-
 .dashed {
 	position: absolute;
 	top: 0;
@@ -65,6 +51,29 @@
 
 :global(.dark-mode) .dashed.dragActive rect {
 	stroke: $link-dark;
+}
+
+.dropZoneWrapper {
+	position: relative;
+	height: 244px;
+	margin-bottom: 16px;
+	text-align: center;
+	background: $off-white;
+	border-radius: 6px;
+	transition: background 0.2s ease;
+
+	&:hover {
+		cursor: pointer;
+
+		.dashed rect {
+			stroke: $link;
+			stroke-width: 4px;
+		}
+	}
+}
+
+:global(.dark-mode) .dropZoneWrapper {
+	background: $dark-grey;
 }
 
 @keyframes dash {
@@ -96,24 +105,21 @@
 }
 
 .imageUploadText {
-	u {
-		font-weight: 700;
-		color: $link;
-		cursor: pointer;
-		transition: color 0.2s ease;
+	height: 48px;
 
-		&:hover {
-			color: darken($link, 5);
-		}
+	span {
+		display: inline-block;
+		overflow: hidden;
+		white-space: nowrap;
+	}
+
+	&.dragActive {
+		height: 48px;
 	}
 }
 
-:global(.dark-mode) .imageUploadText u {
-	color: $link-dark;
-
-	&:hover {
-		color: darken($link-dark, 5);
-	}
+.imageUploadTextActive {
+	line-height: 48px;
 }
 
 .info {
