--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,16 +1,18 @@
 $white: #fff;
+$white-dark: #a8b7c4;
 $off-white: #fafafa;
 
 $grey: #9698a3;
+$grey-dark: #657584;
 $light-grey: #ebebeb;
 $dark-grey: #3d3f47;
 $darker-grey: #33353d;
 
 $black: #000;
 $dark-black: #222329;
-$darker-black: #101114;
+$darker-black: #0e141a;
 
-$link: #4c66d5;
+$link: #4c5ed5;
 $link-dark: #7083ff;
 $link-hover: #7683e2;
 
