--- a/components/typography/index.module.scss
+++ b/components/typography/index.module.scss
@@ -81,11 +81,15 @@
 }
 
 :global(.dark-mode) .black {
-	color: $white;
+	color: $white-dark;
 }
 
 .gray {
 	color: $grey;
+}
+
+:global(.dark-mode) .gray {
+	color: $grey-dark;
 }
 
 .white {
